[workspace]
resolver = "2"
members = [
    "vectors",
    "cvt",
    "hook_macro",
    "early-panic",
    "nondet",
    "solana_cvt",
    "cvt-macros",
    "stubs",
    "calltrace",
    "mathint", "cvlr-asserts",
]

[workspace.package]
version = "0.2.0"
authors = ["Certora"]
description = "Certora Verification Language for Rust"
documentation = "https://certora.com"

[workspace.dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
macrotest = "1"
trybuild = "1"

cvlr-asserts = { path = "cvlr-asserts" }
cvlr-mathint = { path = "mathint", package = "mathint" }
cvlr-nondet = { path = "nondet", package = "nondet" }
cvlr-log = { path = "calltrace", package = "calltrace" }
cvlr-vectors = { path = "vectors", package = "vectors" }
cvlr-macros = { path = "cvt-macros", package = "cvt-macros" }
cvlr-early-panic = { path = "early-panic", package = "early-panic" }
cvlr-hook = { path = "hook_macro", package = "hook-macro"}