[package]
name = "calltrace"
version.workspace = true
authors = ["Jorge Navas <jorge@certora.com>", "Arie Gurfinkel <arie@certora.com>"]
edition = "2021"
publish = false

[features]
deafult = ["mathint"]
rt = ["mathint/rt"]
mathint = ["dep:mathint"]

[dependencies]
mathint = { path = "../mathint", optional = true }