[package]
name = "certora-macros"
version = "0.0.1"
authors = ["Arie Gurfinkel <arie@certora.com>"]
edition = "2021"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1", features = ["nightly"] }
quote = "1"
syn = {version = "2.0.48", features = ["visit-mut", "full"] }
