[package]
name = "cvlr-early-panic"
version.workspace = true
authors = ["Arie Gurfinkel <arie@certora.com>"]
edition = "2021"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true}
syn = { workspace = true, features = ["visit-mut", "full"] }
