[package]
name = "cvt-soroban-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
soroban-sdk = { version = "21.6.0" }
soroban-sdk-macros = { version = "21.6.0" }
quote = { version = "1.0" }
syn = { version = "2.0" }
proc-macro2 = { version = "1.0" }
darling = { version = "0.20.0" }
