[package]
name = "nondet"
version = "0.4.0"
edition = "2021"

[features]
default = ["solana", "std"]
solana = ["std", "dep:solana-program", "stubs/solana"]
spl_token = ["solana", "dep:spl-token", "dep:spl-token-2022"]
std = []
derive = ["derive_nondet"]

[dependencies]
solana-program = {version = "1.18", optional=true}
spl-token = { version = "4.0.0", optional=true}
spl-token-2022 = { version = "3.0.4", optional=true }
cvt = { path = "../cvt" }
stubs = { path = "../stubs" }
derive_nondet = { version = "0.3.0", path = "./derive", optional=true }
