[package]
name = "nondet"
authors = ["Arie Gurfinkel <arie@certora.com>"]
version.workspace = true
edition = "2021"
publish = false

[features]
default = ["std", "solana"]
std = []
solana = ["std", "dep:solana-program", "stubs/solana"]
spl_token = ["solana", "dep:spl-token", "dep:spl-token-2022"]
derive = ["derive_nondet"]

[dependencies]
solana-program = {version = "1.18", optional=true}
spl-token = { version = "4", optional=true}
spl-token-2022 = { version = "3", optional=true }

cvt = { path = "../cvt" }
stubs = { path = "../stubs" }
derive_nondet = { version = "0.3", path = "./derive", optional=true }
