[package]
name = "stubs"
authors = ["Arie Gurfinkel <arie@certora.com>"]
version.workspace = true
edition = "2021"

[features]
impls = ["solana", "dep:solana-sdk"]
solana = ["dep:solana-program"]

[dependencies]
solana-program = {version = "1.17", optional = true}
solana-sdk = { version = "1.17", optional = true  }

[lib]
crate-type = ["lib"]
path = "mod.rs"
