[package]
name = "vectors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = { version = "0.29.0"}
borsh = { version = "0.10" }
cvt = { path = "../cvt" }
nondet = { path = "../nondet" }

[features]
certora-debug = []

[lib]
crate-type = ["lib"]
path = "mod.rs"
name = "vectors"
