[package]
name = "vectors"
authors = ["Jorge A. Navas <jorge@certora.com>"]
version.workspace = true
edition = "2021"


[dependencies]
anchor-lang = { version = "0.29"}
borsh0_10 = { package = "borsh", version = "0.10" }
borsh0_9 = { package = "borsh", version = "0.9" }
cvt = { path = "../cvt" }
nondet = { path = "../nondet" }

[features]
certora-debug = []

[lib]
crate-type = ["lib"]
path = "mod.rs"
